# perception-inspector

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
data/offline_sample/: README.md  labels.json
data/offline_sample/labels/: example_001.json
data/samples/: manifest.json  sample-night-001.ppm
perception-inspector/.git.backup/: config
src/perception_inspector/: __init__.py  cli.py  database.py  inspector.py  labels.py  manifest.py  matching.py  models.py  scene.py  vlm.py
src/perception_inspector/adapters/: __init__.py  yolo.py
tests/: test_database.py  test_inspector.py  test_labels.py  test_matching.py
