[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-inspector"
version = "0.1.0"
description = "AI-assisted failure analysis for autonomous vehicle perception systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pydantic>=2.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "pandas>=2.0", "pillow>=10.0"]
detector = ["ultralytics>=8.3"]
vlm = ["transformers>=4.45", "torch>=2.2", "pillow>=10.0"]
dev = ["pytest>=8.0"]

[project.scripts]
perception-inspector = "perception_inspector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
